syntax = "proto3";
package repl;

// If you are building for other languages "scalapb.proto"
// can be manually obtained here:
// https://raw.githubusercontent.com/scalapb/ScalaPB/master/protobuf/scalapb/scalapb.proto
// make a scalapb directory in this file's location and place it inside

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "coop.rchain.node.model"
  preserve_unknown_fields: false
};

service Repl {
  rpc Run (CmdRequest) returns (ReplResponse) {}
  rpc Eval (EvalRequest) returns (ReplResponse) {}
}

message CmdRequest {
  string line = 1;
}

message EvalRequest {
  string program = 1;
  bool printUnmatchedSendsOnly = 2;
}

message ReplResponse {
  string output = 1;
}
